Bug 980510 - After moving by granularity, swiping to next object brings up current object. r=eeejay